--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -3632,6 +3632,10 @@
     "context": "TimePeriodTextWithSelectField month label",
     "string": "months after usage"
   },
+  "src_dot_giftCards_dot_components_dot_TimePeriodField_dot_weekLabel": {
+    "context": "TimePeriodTextWithSelectField day label",
+    "string": "weeks after usage"
+  },
   "src_dot_giftCards_dot_components_dot_TimePeriodField_dot_yearLabel": {
     "context": "TimePeriodTextWithSelectField year label",
     "string": "years after usage"
