--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -3638,6 +3638,22 @@
     "context": "GiftCardsListTable no cards found title",
     "string": "No gift cards found"
   },
+  "src_dot_giftCards_dot_GiftCardsList_dot_noGiftCardsNotificationCreateProduct": {
+    "context": "GiftCardsListHeader notification",
+    "string": "gift card product"
+  },
+  "src_dot_giftCards_dot_GiftCardsList_dot_noGiftCardsNotificationCreateProductType": {
+    "context": "GiftCardsListHeader notification",
+    "string": "Create a gift card product type"
+  },
+  "src_dot_giftCards_dot_GiftCardsList_dot_noGiftCardsNotificationDescription": {
+    "context": "GiftCardsListHeader notification",
+    "string": "{createGiftCardProductType} and {giftCardProduct} to start selling gift cards in your store."
+  },
+  "src_dot_giftCards_dot_GiftCardsList_dot_noGiftCardsNotificationTitle": {
+    "context": "GiftCardsListHeader notification",
+    "string": "You haven’t defined a gift card product!"
+  },
   "src_dot_giftCards_dot_GiftCardsList_dot_settings": {
     "context": "GiftCardsListHeader menu item settings",
     "string": "Settings"
