--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -4409,6 +4409,10 @@
     "context": "order discount",
     "string": "Discount"
   },
+  "src_dot_orders_dot_components_dot_OrderPayment_dot_372187363": {
+    "context": "order payment",
+    "string": "Paid with Gift Card"
+  },
   "src_dot_orders_dot_components_dot_OrderPayment_dot_3768782744": {
     "context": "order payment",
     "string": "Preauthorized amount"
