--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -3603,11 +3603,11 @@
     "string": "Code ending with {displayCode}"
   },
   "src_dot_giftCards_dot_GiftCardsList_dot_createGiftCardProduct": {
-    "context": "GiftCardsListHeader notification",
+    "context": "GiftCardsListHeader alert",
     "string": "Create a gift card product"
   },
   "src_dot_giftCards_dot_GiftCardsList_dot_createGiftCardProductType": {
-    "context": "GiftCardsListHeader notification",
+    "context": "GiftCardsListHeader alert",
     "string": "Create a gift card product type"
   },
   "src_dot_giftCards_dot_GiftCardsList_dot_exportCodes": {
@@ -3619,7 +3619,7 @@
     "string": "Disabled"
   },
   "src_dot_giftCards_dot_GiftCardsList_dot_giftCardProduct": {
-    "context": "GiftCardsListHeader notification",
+    "context": "GiftCardsListHeader alert",
     "string": "gift card product"
   },
   "src_dot_giftCards_dot_GiftCardsList_dot_giftCardsTableColumnBalanceTitle": {
@@ -3646,24 +3646,24 @@
     "context": "GiftCardsListHeader issue button label",
     "string": "Issue card"
   },
+  "src_dot_giftCards_dot_GiftCardsList_dot_noGiftCardsAlertTitle": {
+    "context": "GiftCardsListHeader alert",
+    "string": "You haven’t defined a gift card product!"
+  },
   "src_dot_giftCards_dot_GiftCardsList_dot_noGiftCardsFound": {
     "context": "GiftCardsListTable no cards found title",
     "string": "No gift cards found"
   },
-  "src_dot_giftCards_dot_GiftCardsList_dot_noGiftCardsNotificationTitle": {
-    "context": "GiftCardsListHeader notification",
-    "string": "You haven’t defined a gift card product!"
-  },
   "src_dot_giftCards_dot_GiftCardsList_dot_noGiftCardsProductTypes": {
-    "context": "GiftCardsListHeader notification",
+    "context": "GiftCardsListHeader alert",
     "string": "{createGiftCardProductType} to start selling gift cards in your store."
   },
   "src_dot_giftCards_dot_GiftCardsList_dot_noGiftCardsProducts": {
-    "context": "GiftCardsListHeader notification",
+    "context": "GiftCardsListHeader alert",
     "string": "{createGiftCardProduct} to start selling gift cards in your store."
   },
   "src_dot_giftCards_dot_GiftCardsList_dot_noGiftCardsProductsAndProductTypes": {
-    "context": "GiftCardsListHeader notification",
+    "context": "GiftCardsListHeader alert",
     "string": "{createGiftCardProductType} and {giftCardProduct} to start selling gift cards in your store."
   },
   "src_dot_giftCards_dot_GiftCardsList_dot_settings": {
