Add channel picker to gift card create modal

--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -3435,10 +3435,6 @@
     "context": "GiftCardCreateDialog customer label",
     "string": "Customer"
   },
-  "src_dot_giftCards_dot_GiftCardCreateDialog_dot_customerSubtitle": {
-    "context": "GiftCardCreateDialog customer subtitle",
-    "string": "Selected customer will be sent the generated gift card code. Someone else can redeem the gift card code. Gift card will be assigned to account which redeemed the code."
-  },
   "src_dot_giftCards_dot_GiftCardCreateDialog_dot_issueButtonLabel": {
     "context": "GiftCardCreateDialog issue button label",
     "string": "Issue"
@@ -3693,6 +3689,22 @@
   "src_dot_giftCards_dot_components_dot_GiftCardExpirySelect_dot_expirySelectedLabel": {
     "context": "GiftCarUpdateDetailsExpirySection expiry selected label",
     "string": "Set gift card expiry date"
+  },
+  "src_dot_giftCards_dot_components_dot_GiftCardSendToCustomer_dot_channelSelectLabel": {
+    "context": "GiftCardCreateDialog channel select label",
+    "string": "Channel"
+  },
+  "src_dot_giftCards_dot_components_dot_GiftCardSendToCustomer_dot_customerChannelSubtitle": {
+    "context": "GiftCardCreateDialog customer channel subtitle",
+    "string": "Customer will be sent the gift card code via this channels email address"
+  },
+  "src_dot_giftCards_dot_components_dot_GiftCardSendToCustomer_dot_customerSubtitle": {
+    "context": "GiftCardCreateDialog customer subtitle",
+    "string": "Selected customer will be sent the generated gift card code. Someone else can redeem the gift card code. Gift card will be assigned to account which redeemed the code."
+  },
+  "src_dot_giftCards_dot_components_dot_GiftCardSendToCustomer_dot_sendToCustomerSelectedLabel": {
+    "context": "GiftCardSendToCustomer send to customer selected label",
+    "string": "Send gift card to customer"
   },
   "src_dot_giftCards_dot_components_dot_GiftCardSettingsExpirySelect_dot_setExpirationPeriodDescription": {
     "context": "checkbox label description",
